--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6",
+    "emailjs-com": "^2.6.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
+    "react-dadata": "^2.8.0",
     "react-dom": "^17.0.1",
+    "react-input-mask": "^2.0.4",
+    "react-responsive": "^8.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
